crates/tokmd-analysis-format/tests/snapshots/snapshot_analysis_w50__snapshot_md_empty_receipt.snap
---
source: crates/tokmd-analysis-format/tests/snapshot_analysis_w50.rs
expression: text
---
# tokmd analysis

Preset: `receipt`

## Inputs

- `.`
